src/objects/Survey_Case_Codes__c.object
<CustomObject>
    <description>Lookup table for branch/dept codes used to assign to queues</description>
    <fields>
        <fullName>Branch_Dept__c</fullName>
        <label>Branch/Dept</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Category__c</fullName>
        <label>Primary Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Category__c</fullName>
        <label>Secondary Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertiary_Category__c</fullName>
        <label>Tertiary Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Survey Case Codes</label>
    <listViews>
        <fullName>All_Survey_Case_Codes</fullName>
        <columns>NAME</columns>
        <columns>Branch_Dept__c</columns>
        <columns>Queue__c</columns>
        <columns>Primary_Category__c</columns>
        <columns>Secondary_Category__c</columns>
        <columns>Tertiary_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Survey Case Codes</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Case Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>